force-app/main/default/objects/Session__c/fields/Cost_per_attendant__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_attendant__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Cost per attendant</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>