force-app/main/default/objects/Session__c/fields/Days_remains__c.field-meta.xml
<CustomField>
    <fullName>Days_remains__c</fullName>
    <formula>Session_Date__c  - DATETIMEVALUE(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days remains</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>