force-app/main/default/objects/Session__c/fields/Event_Place_counter_switch__c.field-meta.xml
<CustomField>
    <fullName>Event_Place_counter_switch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Event Place counter switch</label>
    <type>Checkbox</type>
</CustomField>