force-app/main/default/objects/Session__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JUNIOR</fullName>
                <default>true</default>
                <label>JUNIOR</label>
            </value>
            <value>
                <fullName>MIDDLE</fullName>
            </value>
            <value>
                <fullName>SENIOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>