force-app/main/default/objects/Session__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>