force-app/main/default/objects/Session__c/fields/Seats_available__c.field-meta.xml
<CustomField>
    <fullName>Seats_available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Seats available</label>
    <type>Checkbox</type>
</CustomField>