force-app/main/default/objects/Session__c/validationRules/DateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>!isArchive__c  &amp;&amp; Days_remains__c &lt; 0</errorConditionFormula>
    <errorMessage>Check dates or add &apos;ARCHIVE&apos; to the name</errorMessage>
</ValidationRule>